feb22/networkpolicydemo/pods/pods.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: qtecommerce
  name: dev
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: frontend
  namespace: dev
  name: one
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: outside
  name: two
spec:
  containers:
    - image: alpine
      name: alpine
      args:
        - sleep
        - 1d
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    tier: frontend
  name: three
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
  restartPolicy: Never
